[workspace]
members = [
    "webtor",
    "webtor-wasm",
    "webtor-demo"
]
exclude = [
    "subtle-tls/fuzz",
    "webtor/fuzz"
]
resolver = "2"

[workspace.package]
version = "0.5.7"
edition = "2021"
authors = ["Webtor Contributors"]
license = "MIT"
repository = "https://github.com/voltrevo/webtor-rs"

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3.69", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "ReadableStream",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "HtmlDivElement",
    "Text",
    "Node",
    "NodeList",
    "DocumentFragment",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "KeyboardEvent",
    "Blob",
    "FileReader",
    "Response",
    "Request",
    "Headers",
    "RequestInit",
    # WebRTC features for Snowflake
    "RtcPeerConnection",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcSignalingState",
    "RtcDataChannelType",
    # HTTP fetch features
    "RequestMode",
    # Performance API for timing
    "Performance"
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
futures = "0.3"
http = "1.1"
url = "2.5"
tracing = "0.1"
tracing-wasm = "0.2"
getrandom = { version = "0.2", features = ["js"] }

# Tor-related dependencies (Arti 1.8.0)
tor-rtcompat = { version = "0.37.0", default-features = false }
tor-proto = { version = "0.37.0", default-features = false }
tor-netdoc = { version = "0.37.0", default-features = false }
tor-linkspec = "0.37.0"
tor-llcrypto = "0.37.0"
tor-cell = "0.37.0"
tor-error = "0.37.0"
tor-async-utils = "0.37.0"
tor-memquota = "0.37.0"
tor-protover = "0.37.0"
tor-units = "0.37.0"
tor-checkable = "0.37.0"

# Cryptography
rsa = "0.9"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
chacha20poly1305 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"

# TLS
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
futures-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
rustls-pki-types = "1.8"

# Native WebSocket (for non-WASM targets)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

# Async runtime
wasm-bindgen-test = "0.3"

# WASM utilities
gloo-timers = { version = "0.3", features = ["futures"] }

# KCP reliable transport
kcp = "0.6"

[patch.crates-io]
tor-basic-utils = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-proto = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-rtcompat = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-async-utils = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-rtmock = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-memquota = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-units = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-log-ratelim = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
safelog = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
slotmap-careful = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
caret = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
oneshot-fused-workaround = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-bytes = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-cell = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-cert = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-config = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-error = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-linkspec = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-llcrypto = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-protover = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-relay-crypto = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-config-path = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-persist = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-general-addr = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-hscrypto = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-key-forge = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-keymgr = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-checkable = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
tor-netdoc = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
fslock-guard = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }
fs-mistrust = { git = "https://github.com/voltrevo/arti", rev = "2dacba5cdf56b54cb64107fff6f555715eb3f10f" }

# Release profile optimized for WASM bundle size
[profile.release]
opt-level = "z"        # Optimize for size
lto = "fat"            # Full LTO for better dead code elimination
codegen-units = 1      # Single codegen unit for better optimization
strip = "debuginfo"    # Strip debug info but keep symbols for wasm-bindgen
panic = "abort"        # Smaller binary, no unwinding overhead
debug = 0              # No debug info

# Keep unwinding for tests to get better error messages
[profile.test]
panic = "unwind"